crates/criticalup-cli/tests/snapshots/cli__clean__clean_deletes_only_unused_installations.snap
---
source: crates/criticalup-cli/tests/cli/clean.rs
expression: repr
---
exit: exit status: 1

empty stdout

stderr
------
 INFO Deleting unused installation installation_id_2
 INFO Deleting unused installation installation_id_3
error: No such file or directory (os error 2)
------
