crates/criticalup-cli/tests/snapshots/cli__clean__clean_deletes_only_unused_installations_that_are_not_on_disk.snap
---
source: crates/criticalup-cli/tests/cli/clean.rs
expression: repr
---
exit: exit status: 0

empty stdout

stderr
------
 INFO Deleting unused installation installation_id_2
 INFO Deleting unused installation installation_id_3
 INFO No untracked installation directories found
------
