crates/criticalup-cli/tests/snapshots/cli__clean__help_message.snap
---
source: crates/criticalup-cli/tests/cli/clean.rs
expression: repr
snapshot_kind: text
---
exit: exit status: 0

empty stdout

stderr
------
Delete cache and unused installations

Usage:
  criticalup-test clean [OPTIONS]

Options:
  -v, --verbose...                  Enable debug logs, -vv for trace
      --log-level [<LOG_LEVEL>...]  Tracing directives
  -h, --help                        Print help
------
