crates/criticalup-cli/tests/snapshots/cli__clean__removes_unused_installations_from_disk_that_do_not_have_state.snap
---
source: crates/criticalup-cli/tests/cli/clean.rs
expression: repr
---
exit: exit status: 0

empty stdout

stderr
------
 INFO Deleting unused installation installation_id_2
 INFO deleting unused installation directory /path/to/toolchain/installation/installation_id_2/
 INFO deleting untracked installation directory /path/to/toolchain/installation/installation_id_3/
------
